[package]
name = "steam-launch"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
config = "0.14.0"
itertools = "0.12.0"
serde = { version = "1.0.196", features = ["derive"] }
toml = "0.8.9"
winres = "0.1.12"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
