[package]
name = "steam-launch"
version = "0.2.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
config = "0.14.0"
itertools = "0.12.0"
serde = { version = "1.0.196", features = ["derive"] }
toml = "0.8.9"
winres = "0.1.12"
tracing = "0.1.26"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
